MFChen/parser/MFChenParser.java
// Generated from MFChen.g4 by ANTLR 4.5.2
package MFChen.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MFChenParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		Break=1, Class=2, Continue=3, Const=4, Else=5, For=6, If=7, Int=8, New=9, 
		Null=10, Return=11, String=12, Void=13, While=14, Bool=15, L_Paren=16, 
		R_Paren=17, L_Bracket=18, R_Bracket=19, L_Brace=20, R_Brace=21, Less=22, 
		LessEqual=23, Greater=24, GreaterEqual=25, LeftShift=26, RightShift=27, 
		Plus=28, PlusPlus=29, Minus=30, MinusMinus=31, Star=32, Div=33, Mod=34, 
		And=35, Or=36, AndAnd=37, OrOr=38, Caret=39, Not=40, Tilde=41, Colon=42, 
		Semi=43, Comma=44, Assign=45, Equal=46, NotEqual=47, Dot=48, LogicalConstant=49, 
		IntLiteral=50, Identifier=51, IntegerConstant=52, StringLiteral=53, Constant=54, 
		WhiteSpace=55, Comment=56, Length=57, Substring=58, Parseint=59, Ord=60, 
		Size=61;
	public static final int
		RULE_program = 0, RULE_class_declaration = 1, RULE_typeSpecifier = 2, 
		RULE_member_declaration_list = 3, RULE_func_declaration = 4, RULE_parameter_list = 5, 
		RULE_block_statement = 6, RULE_statement_list = 7, RULE_var_decl_stmt = 8, 
		RULE_statement = 9, RULE_jump_statement = 10, RULE_selection_statement = 11, 
		RULE_iteration_statement = 12, RULE_first_expression = 13, RULE_second_expression = 14, 
		RULE_third_expression = 15, RULE_expression_statement = 16, RULE_expression = 17, 
		RULE_assignment_expression = 18, RULE_logical_oror_expression = 19, RULE_logical_andand_expression = 20, 
		RULE_logical_or_expression = 21, RULE_logical_xor_expression = 22, RULE_logical_and_expression = 23, 
		RULE_logical_NotEqual_expression = 24, RULE_logical_Equal_expression = 25, 
		RULE_logical_LessEqual_expression = 26, RULE_logical_Less_expression = 27, 
		RULE_logical_GreaterEqual_expression = 28, RULE_logical_Greater_expression = 29, 
		RULE_logical_RightShift_expression = 30, RULE_logical_LeftShift_expression = 31, 
		RULE_minus_expression = 32, RULE_plus_expression = 33, RULE_mod_expression = 34, 
		RULE_multiply_expression = 35, RULE_divide_expression = 36, RULE_creation_expression = 37, 
		RULE_unary_expression = 38, RULE_paren_expression = 39, RULE_dim_list = 40, 
		RULE_dim_expression = 41, RULE_call_parameter_list = 42, RULE_call_expression = 43, 
		RULE_constant_expression = 44;
	public static final String[] ruleNames = {
		"program", "class_declaration", "typeSpecifier", "member_declaration_list", 
		"func_declaration", "parameter_list", "block_statement", "statement_list", 
		"var_decl_stmt", "statement", "jump_statement", "selection_statement", 
		"iteration_statement", "first_expression", "second_expression", "third_expression", 
		"expression_statement", "expression", "assignment_expression", "logical_oror_expression", 
		"logical_andand_expression", "logical_or_expression", "logical_xor_expression", 
		"logical_and_expression", "logical_NotEqual_expression", "logical_Equal_expression", 
		"logical_LessEqual_expression", "logical_Less_expression", "logical_GreaterEqual_expression", 
		"logical_Greater_expression", "logical_RightShift_expression", "logical_LeftShift_expression", 
		"minus_expression", "plus_expression", "mod_expression", "multiply_expression", 
		"divide_expression", "creation_expression", "unary_expression", "paren_expression", 
		"dim_list", "dim_expression", "call_parameter_list", "call_expression", 
		"constant_expression"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'break'", "'class'", "'continue'", "'const'", "'else'", "'for'", 
		"'if'", "'int'", "'new'", "'null'", "'return'", "'string'", "'void'", 
		"'while'", "'bool'", "'('", "')'", "'['", "']'", "'{'", "'}'", "'<'", 
		"'<='", "'>'", "'>='", "'<<'", "'>>'", "'+'", null, "'-'", "'--'", "'*'", 
		"'/'", "'%'", "'&'", "'|'", "'&&'", "'||'", "'^'", "'!'", "'~'", "':'", 
		"';'", "','", "'='", "'=='", "'!='", "'.'", null, null, null, null, null, 
		null, null, null, "'length'", "'substring'", "'parseInt'", "'ord'", "'size'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "Break", "Class", "Continue", "Const", "Else", "For", "If", "Int", 
		"New", "Null", "Return", "String", "Void", "While", "Bool", "L_Paren", 
		"R_Paren", "L_Bracket", "R_Bracket", "L_Brace", "R_Brace", "Less", "LessEqual", 
		"Greater", "GreaterEqual", "LeftShift", "RightShift", "Plus", "PlusPlus", 
		"Minus", "MinusMinus", "Star", "Div", "Mod", "And", "Or", "AndAnd", "OrOr", 
		"Caret", "Not", "Tilde", "Colon", "Semi", "Comma", "Assign", "Equal", 
		"NotEqual", "Dot", "LogicalConstant", "IntLiteral", "Identifier", "IntegerConstant", 
		"StringLiteral", "Constant", "WhiteSpace", "Comment", "Length", "Substring", 
		"Parseint", "Ord", "Size"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MFChen.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MFChenParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public List<Class_declarationContext> class_declaration() {
			return getRuleContexts(Class_declarationContext.class);
		}
		public Class_declarationContext class_declaration(int i) {
			return getRuleContext(Class_declarationContext.class,i);
		}
		public List<Func_declarationContext> func_declaration() {
			return getRuleContexts(Func_declarationContext.class);
		}
		public Func_declarationContext func_declaration(int i) {
			return getRuleContext(Func_declarationContext.class,i);
		}
		public List<Var_decl_stmtContext> var_decl_stmt() {
			return getRuleContexts(Var_decl_stmtContext.class);
		}
		public Var_decl_stmtContext var_decl_stmt(int i) {
			return getRuleContext(Var_decl_stmtContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MFChenVisitor ) return ((MFChenVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Class) | (1L << Int) | (1L << String) | (1L << Void) | (1L << Bool) | (1L << Identifier))) != 0)) {
				{
				setState(93);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(90);
					class_declaration();
					}
					break;
				case 2:
					{
					setState(91);
					func_declaration();
					}
					break;
				case 3:
					{
					setState(92);
					var_decl_stmt();
					}
					break;
				}
				}
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_declarationContext extends ParserRuleContext {
		public TerminalNode Class() { return getToken(MFChenParser.Class, 0); }
		public TerminalNode Identifier() { return getToken(MFChenParser.Identifier, 0); }
		public TerminalNode L_Brace() { return getToken(MFChenParser.L_Brace, 0); }
		public TerminalNode R_Brace() { return getToken(MFChenParser.R_Brace, 0); }
		public Member_declaration_listContext member_declaration_list() {
			return getRuleContext(Member_declaration_listContext.class,0);
		}
		public Class_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_declaration; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MFChenVisitor ) return ((MFChenVisitor<? extends T>)visitor).visitClass_declaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Class_declarationContext class_declaration() throws RecognitionException {
		Class_declarationContext _localctx = new Class_declarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_class_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(Class);
			setState(99);
			match(Identifier);
			setState(100);
			match(L_Brace);
			setState(102);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Int) | (1L << String) | (1L << Bool) | (1L << Identifier))) != 0)) {
				{
				setState(101);
				member_declaration_list();
				}
			}

			setState(104);
			match(R_Brace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeSpecifierContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(MFChenParser.Identifier, 0); }
		public List<TerminalNode> L_Bracket() { return getTokens(MFChenParser.L_Bracket); }
		public TerminalNode L_Bracket(int i) {
			return getToken(MFChenParser.L_Bracket, i);
		}
		public List<TerminalNode> R_Bracket() { return getTokens(MFChenParser.R_Bracket); }
		public TerminalNode R_Bracket(int i) {
			return getToken(MFChenParser.R_Bracket, i);
		}
		public TypeSpecifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeSpecifier; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MFChenVisitor ) return ((MFChenVisitor<? extends T>)visitor).visitTypeSpecifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeSpecifierContext typeSpecifier() throws RecognitionException {
		TypeSpecifierContext _localctx = new TypeSpecifierContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_typeSpecifier);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Int) | (1L << String) | (1L << Bool) | (1L << Identifier))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			setState(111);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(107);
					match(L_Bracket);
					setState(108);
					match(R_Bracket);
					}
					} 
				}
				setState(113);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Member_declaration_listContext extends ParserRuleContext {
		public TypeSpecifierContext typeSpecifier() {
			return getRuleContext(TypeSpecifierContext.class,0);
		}
		public TerminalNode Identifier() { return getToken(MFChenParser.Identifier, 0); }
		public TerminalNode Semi() { return getToken(MFChenParser.Semi, 0); }
		public Member_declaration_listContext member_declaration_list() {
			return getRuleContext(Member_declaration_listContext.class,0);
		}
		public Member_declaration_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_member_declaration_list; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MFChenVisitor ) return ((MFChenVisitor<? extends T>)visitor).visitMember_declaration_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Member_declaration_listContext member_declaration_list() throws RecognitionException {
		Member_declaration_listContext _localctx = new Member_declaration_listContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_member_declaration_list);
		try {
			setState(123);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(114);
				typeSpecifier();
				setState(115);
				match(Identifier);
				setState(116);
				match(Semi);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(118);
				typeSpecifier();
				setState(119);
				match(Identifier);
				setState(120);
				match(Semi);
				setState(121);
				member_declaration_list();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Func_declarationContext extends ParserRuleContext {
		public TypeSpecifierContext typeSpecifier() {
			return getRuleContext(TypeSpecifierContext.class,0);
		}
		public TerminalNode Identifier() { return getToken(MFChenParser.Identifier, 0); }
		public TerminalNode L_Paren() { return getToken(MFChenParser.L_Paren, 0); }
		public TerminalNode R_Paren() { return getToken(MFChenParser.R_Paren, 0); }
		public Block_statementContext block_statement() {
			return getRuleContext(Block_statementContext.class,0);
		}
		public Parameter_listContext parameter_list() {
			return getRuleContext(Parameter_listContext.class,0);
		}
		public TerminalNode Void() { return getToken(MFChenParser.Void, 0); }
		public Func_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_declaration; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MFChenVisitor ) return ((MFChenVisitor<? extends T>)visitor).visitFunc_declaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Func_declarationContext func_declaration() throws RecognitionException {
		Func_declarationContext _localctx = new Func_declarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_func_declaration);
		int _la;
		try {
			setState(142);
			switch (_input.LA(1)) {
			case Int:
			case String:
			case Bool:
			case Identifier:
				enterOuterAlt(_localctx, 1);
				{
				setState(125);
				typeSpecifier();
				setState(126);
				match(Identifier);
				setState(127);
				match(L_Paren);
				setState(129);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Int) | (1L << String) | (1L << Bool) | (1L << Identifier))) != 0)) {
					{
					setState(128);
					parameter_list();
					}
				}

				setState(131);
				match(R_Paren);
				setState(132);
				block_statement();
				}
				break;
			case Void:
				enterOuterAlt(_localctx, 2);
				{
				setState(134);
				match(Void);
				setState(135);
				match(Identifier);
				setState(136);
				match(L_Paren);
				setState(138);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Int) | (1L << String) | (1L << Bool) | (1L << Identifier))) != 0)) {
					{
					setState(137);
					parameter_list();
					}
				}

				setState(140);
				match(R_Paren);
				setState(141);
				block_statement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Parameter_listContext extends ParserRuleContext {
		public TypeSpecifierContext typeSpecifier() {
			return getRuleContext(TypeSpecifierContext.class,0);
		}
		public TerminalNode Identifier() { return getToken(MFChenParser.Identifier, 0); }
		public TerminalNode Comma() { return getToken(MFChenParser.Comma, 0); }
		public Parameter_listContext parameter_list() {
			return getRuleContext(Parameter_listContext.class,0);
		}
		public Parameter_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameter_list; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MFChenVisitor ) return ((MFChenVisitor<? extends T>)visitor).visitParameter_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Parameter_listContext parameter_list() throws RecognitionException {
		Parameter_listContext _localctx = new Parameter_listContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_parameter_list);
		try {
			setState(152);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(144);
				typeSpecifier();
				setState(145);
				match(Identifier);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(147);
				typeSpecifier();
				setState(148);
				match(Identifier);
				setState(149);
				match(Comma);
				setState(150);
				parameter_list();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Block_statementContext extends ParserRuleContext {
		public TerminalNode L_Brace() { return getToken(MFChenParser.L_Brace, 0); }
		public TerminalNode R_Brace() { return getToken(MFChenParser.R_Brace, 0); }
		public Statement_listContext statement_list() {
			return getRuleContext(Statement_listContext.class,0);
		}
		public Block_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block_statement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MFChenVisitor ) return ((MFChenVisitor<? extends T>)visitor).visitBlock_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Block_statementContext block_statement() throws RecognitionException {
		Block_statementContext _localctx = new Block_statementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_block_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			match(L_Brace);
			setState(156);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Break) | (1L << Continue) | (1L << For) | (1L << If) | (1L << Int) | (1L << New) | (1L << Null) | (1L << Return) | (1L << String) | (1L << While) | (1L << Bool) | (1L << L_Paren) | (1L << L_Brace) | (1L << PlusPlus) | (1L << Minus) | (1L << Not) | (1L << Tilde) | (1L << Semi) | (1L << LogicalConstant) | (1L << IntLiteral) | (1L << Identifier) | (1L << StringLiteral))) != 0)) {
				{
				setState(155);
				statement_list();
				}
			}

			setState(158);
			match(R_Brace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Statement_listContext extends ParserRuleContext {
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public Statement_listContext statement_list() {
			return getRuleContext(Statement_listContext.class,0);
		}
		public Statement_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement_list; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MFChenVisitor ) return ((MFChenVisitor<? extends T>)visitor).visitStatement_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Statement_listContext statement_list() throws RecognitionException {
		Statement_listContext _localctx = new Statement_listContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_statement_list);
		try {
			setState(164);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(160);
				statement();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(161);
				statement();
				setState(162);
				statement_list();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_decl_stmtContext extends ParserRuleContext {
		public TypeSpecifierContext typeSpecifier() {
			return getRuleContext(TypeSpecifierContext.class,0);
		}
		public TerminalNode Identifier() { return getToken(MFChenParser.Identifier, 0); }
		public TerminalNode Semi() { return getToken(MFChenParser.Semi, 0); }
		public TerminalNode Assign() { return getToken(MFChenParser.Assign, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Var_decl_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_decl_stmt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MFChenVisitor ) return ((MFChenVisitor<? extends T>)visitor).visitVar_decl_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Var_decl_stmtContext var_decl_stmt() throws RecognitionException {
		Var_decl_stmtContext _localctx = new Var_decl_stmtContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_var_decl_stmt);
		try {
			setState(176);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(166);
				typeSpecifier();
				setState(167);
				match(Identifier);
				setState(168);
				match(Semi);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(170);
				typeSpecifier();
				setState(171);
				match(Identifier);
				setState(172);
				match(Assign);
				setState(173);
				expression();
				setState(174);
				match(Semi);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
